fix @ComponentScan issuse for module-app